--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -117,4 +117,100 @@
         app:layout_constraintTop_toBottomOf="@id/street"
         />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="36dp"
+        app:backgroundTint="#FFFFFF"
+        android:text="Edit Adress"
+        android:textSize="12sp"
+        android:textStyle="normal"
+        android:textColor="#313131"
+        app:cornerRadius="16dp"
+        app:strokeColor="#A2A2A2"
+        app:strokeWidth="1dp"
+        app:icon="@drawable/edit"
+        app:iconTint="#313131"
+        android:id="@+id/edit_btn"
+
+        app:layout_constraintTop_toBottomOf="@+id/adress_details"
+        android:layout_marginTop="15dp"
+        app:layout_constraintStart_toStartOf="@+id/delivery_pickup"
+        />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="36dp"
+        app:backgroundTint="#FFFFFF"
+        android:text="Add Note"
+        android:textSize="12sp"
+        android:textStyle="normal"
+        android:textColor="#313131"
+        app:cornerRadius="16dp"
+        app:strokeColor="#A2A2A2"
+        app:strokeWidth="1dp"
+        app:icon="@drawable/note"
+        app:iconTint="#313131"
+        android:id="@+id/add_nt"
+
+        app:layout_constraintTop_toTopOf="@+id/edit_btn"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/edit_btn"
+
+        app:layout_constraintStart_toEndOf="@+id/edit_btn"
+        />
+
+    <View
+        android:id="@+id/line_third"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:background="#E3E3E3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_btn"
+        android:layout_marginTop="15dp"
+        android:layout_marginStart="38dp"
+        android:layout_marginEnd="38dp"
+        />
+    
+    <ImageView
+        android:layout_width="54dp"
+        android:layout_height="54dp"
+        android:id="@+id/image_small"
+        android:src="@drawable/secondcoffee"
+        android:scaleType="centerCrop"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/line_third"
+        app:layout_constraintStart_toStartOf="@+id/delivery_pickup"
+        android:background="@drawable/bg_radius"
+        android:clipToOutline="true"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Caffe Mocha"
+        android:textStyle="bold"
+        android:textColor="#242424"
+        android:id="@+id/mocha"
+        app:layout_constraintTop_toTopOf="@+id/image_small"
+        app:layout_constraintStart_toEndOf="@+id/image_small"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="16dp"
+        android:textSize="16sp"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Deep Foam"
+        android:textSize="12sp"
+        android:textColor="#A2A2A2"
+        android:textStyle="normal"
+        android:id="@+id/foam"
+        app:layout_constraintTop_toBottomOf="@+id/mocha"
+        app:layout_constraintStart_toStartOf="@+id/mocha"
+        app:layout_constraintBottom_toBottomOf="@+id/image_small"
+        android:layout_marginBottom="2dp"
+
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
