--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -213,4 +213,118 @@
         android:layout_marginBottom="2dp"
 
         />
+
+    <View
+        android:id="@+id/line_brown"
+        android:layout_width="0dp"
+        android:layout_height="4dp"
+        android:background="#F9F2ED"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/image_small"
+        android:layout_marginTop="20dp"
+
+        />
+
+    <Button
+        android:layout_width="0dp"
+        android:layout_height="56dp"
+        app:layout_constraintTop_toBottomOf="@id/line_brown"
+        android:layout_marginTop="15dp"
+        app:backgroundTint="@null"
+        android:background="@drawable/last_btn"
+        app:layout_constraintStart_toStartOf="@id/delivery_pickup"
+        app:layout_constraintEnd_toEndOf="@id/delivery_pickup"
+        app:icon="@drawable/discount"
+        app:iconTint="#C67C4E"
+        android:text="1 Discount is Applies"
+        android:textColor="#313131"
+        android:textStyle="bold"
+        android:paddingStart="20dp"
+        android:id="@+id/discount_btn"
+        app:iconPadding="16dp"
+
+        android:gravity="start|center_vertical"
+        android:textSize="14sp"
+
+
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Payment Summary"
+        android:textColor="#242424"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:id="@+id/summary"
+        android:layout_marginTop="20dp"
+        app:layout_constraintLeft_toLeftOf="@+id/discount_btn"
+        app:layout_constraintTop_toBottomOf="@+id/discount_btn" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/price"
+        app:layout_constraintTop_toBottomOf="@id/summary"
+        android:layout_marginTop="15dp"
+        android:textSize="14sp"
+        android:text="Price"
+        app:layout_constraintStart_toStartOf="@id/summary"
+        android:textColor="#313131"
+
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/fee"
+        app:layout_constraintTop_toBottomOf="@id/price"
+        android:layout_marginTop="10dp"
+        android:textSize="14sp"
+        android:text="Delivery Fee"
+        app:layout_constraintStart_toStartOf="@id/summary"
+        android:textColor="#313131"
+
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="$ 4.53"
+        android:textColor="#242424"
+        android:textStyle="bold"
+        android:textSize="14sp"
+        app:layout_constraintBaseline_toBaselineOf="@id/price"
+        app:layout_constraintEnd_toEndOf="@+id/delivery_pickup"
+
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="$ 1.0"
+        android:textColor="#242424"
+        android:textSize="14sp"
+        android:id="@+id/new_pr"
+        android:textStyle="bold"
+        app:layout_constraintBaseline_toBaselineOf="@id/fee"
+        app:layout_constraintEnd_toEndOf="@+id/delivery_pickup"
+
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="$ 2.0"
+        android:textColor="#2A2A2A"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:layout_constraintBaseline_toBaselineOf="@id/new_pr"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toStartOf="@+id/new_pr"
+
+        />
+
+    
 </androidx.constraintlayout.widget.ConstraintLayout>
