--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -355,7 +355,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="$ 2.0"
+        android:text="@string/_2_0"
         android:textColor="#2A2A2A"
         android:textSize="14sp"
         app:layout_constraintBaseline_toBaselineOf="@id/new_pr"
